[gd_scene load_steps=4 format=2]

[ext_resource path="res://CanvasLayer-HUD.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "appear"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Label_msg:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label_msg:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "padrao"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Label_msg:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="CanvasLayer_HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer_Scorebox" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1024.0
margin_top = 544.0
margin_right = 3.0
margin_bottom = 598.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer_Scorebox"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1007.0
margin_bottom = 34.0
alignment = 2

[node name="Label2_Text" type="Label" parent="MarginContainer_Scorebox/HBoxContainer"]
margin_left = 924.0
margin_right = 959.0
margin_bottom = 14.0
size_flags_vertical = 5
text = "Score"

[node name="Label_Score" type="Label" parent="MarginContainer_Scorebox/HBoxContainer"]
margin_left = 963.0
margin_right = 987.0
margin_bottom = 14.0
size_flags_vertical = 5
text = "100"

[node name="Label_msg" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_top = 5.0
margin_right = 1005.0
margin_bottom = 37.0
text = "MSG"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/appear = SubResource( 1 )
anims/padrao = SubResource( 2 )
